# mnemopay-sdk

./: .env.example  .gitignore  README.md  docker-compose.yml  fly.toml  mnemopay-sdk-0.3.0.tgz  package-lock.json  package.json  smithery.yaml  tsconfig.json
.github/: FUNDING.yml
dashboard/: server.js
examples/: 01-quick-start.ts  02-openai-middleware.ts  03-anthropic-middleware.ts  04-langgraph-agent.ts  05-agents-hiring-agents.ts  06-production.ts
gtm/: agency-procurement-map.md  auvsi-speaker-proposal.md  darpa-clara-proposal.md  devto-eu-ai-act-article.md  faa-part-146-watch.md  finops-slack-intro.md  focus.md  gridstamp-brief.html  gtm-strategy-30-60-90.md  gutma-gridstamp-brief.md  hn-agent-fico-post.md  micro-niche-research-2026-04-11.md  nsf-sbir-project-pitch.md  outreach-embention.md  outreach-klaimee.md  outreach-qbvp-nas.md  outreach-wing-aviation.md  outreach.md  pilot-contract-template.md  stellar-soroban-decision.md
gtm/african-restaurants/: bizsuite-pitch.md  businesses.md
gtm/grants/: README.md  breva-thrive.md  dallas-diversity-fund.md  dot-sbir-gridstamp.md  google-black-founders.md  hello-alice.md  hidden-star-galaxy.md  insurtech-accelerators.md  kiva.md  nmsdc-mbe.md  nsf-sbir-project-pitch.md  perplexity_billion_dollar_build.md  stellar-community-fund.md
gtm/grants/blackpig-films/: README.md  afs-grants.md  black-film-space.md  catapult.md  roy-w-dean.md  sffilm-rainin.md
gtm/grants/blackpig-films/eligible-roy-w-dean/: jerry-omiagbo-eligible-budget.md  jerry-omiagbo-eligible-cover-letter.md  jerry-omiagbo-eligible-crew-bios.md  jerry-omiagbo-eligible-proposal.md  (+1 more)
gtm/outreach/: dm-templates.md  mcp-authors.md
integrations/_shared/: mcp_client.py
integrations/agno/: README.md  mnemopay_agno.py  pyproject.toml
integrations/autogen/: README.md  mnemopay_autogen.py  pyproject.toml
integrations/composio/: README.md  mnemopay_composio.py  pyproject.toml
integrations/crewai/: pyproject.toml
integrations/crewai/mnemopay_crewai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/hermes-plugin/: README.md  plugin.yaml  pyproject.toml
integrations/hermes-plugin/mnemopay_hermes/: schemas.py  tools.py
integrations/hermes-plugin/mnemopay_hermes.egg-info/: PKG-INFO
integrations/langchain/: package-lock.json  package.json
integrations/langchain/src/: index.ts
integrations/openai-agents/: README.md  mnemopay_openai_agents.py  pyproject.toml
integrations/openclaw/: SKILL.md
integrations/pydantic-ai/: README.md  mnemopay_pydantic_ai.py  pyproject.toml
marketing/: _quote_once.js  analytics.js  autopost.js  b2b-outreach.md  blog-agent-memory-three-dimensional.md  crm.js  cron-devto.js  daily-marketing.js  devto-tutorial.md  distribute.js  email-followup.js  email-launch.js  email-mcp-partners.js  linkedin-auth.js  linkedin-oauth-helper.js  pipeline.js  reports.js  retry-queue.js  run-daily.bat  schedule-daily.bat  send-day4-followups.js  send-eu-ai-act.js  seo-geo-monitor.js  show-hn.md  staged-launch-2026-04-15.md  suppression.cjs  suppression.js
marketing/data/: content-queue.json  daily-log.json  drip-log.json  post-log.json  prospects.json
marketing/templates/: ganas-ventures-pitch.html  mcp-billing-pitch.html  pipeline-pitch.html
marketing/video-production/: ASSEMBLY-GUIDE.md  README.md  SHOT-LIST.md  VOICEOVER-SCRIPT.md  generate-voiceover.js
src/: fraud.ts  identity.ts  index.ts  ledger.ts  network.ts
src/cli/: setup.ts
src/core/: sdk.ts
src/langgraph/: tools.ts
src/mcp/: server.ts
src/memory/: embeddings.ts  store.ts
src/middleware/: anthropic.ts  openai.ts
src/rails/: index.ts  paystack.ts
src/sync/: encrypted-sync.ts
test/: sdk.test.js
tests/: core.test.ts  fraud.test.ts  geo-fraud.test.ts  identity.test.ts  ledger.test.ts  network.test.ts  paystack.test.ts  sdk.test.ts  stress.test.ts
