[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemopay-pydantic-ai"
version = "1.0.0"
description = "MnemoPay tools for Pydantic AI — persistent memory + micropayments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Jerry Omiagbo", email = "jeremiah@getbizsuite.com"}]
keywords = ["pydantic", "pydantic-ai", "mnemopay", "memory", "payments", "mcp"]
dependencies = ["pydantic-ai>=0.1.0"]

[tool.setuptools]
py-modules = ["mnemopay_pydantic_ai"]

[project.urls]
Homepage = "https://github.com/mnemopay/mnemopay-sdk"
Repository = "https://github.com/mnemopay/mnemopay-sdk/tree/master/integrations/pydantic-ai"
